added section slider

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New Project</title>
+  <title>Glee.</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -73,7 +73,58 @@
   </header>
 
   <main class="main">
-    
+    <section class="slider">
+      <div class="slider__gradient"></div>
+      <div class="container">
+        <div class="slider__wrapper">
+          <div class="slider__item">
+            <div class="slider__content">
+              <h1 class="slider__title">
+                SMART AND
+                TRENDY
+              </h1>
+              <p class="slider__text">
+                Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              </p>
+              <a class="slider__btn-link" href="#">
+                Shop Now
+              </a>
+            </div>
+            <img class="slider__img" src="images/slider/1.png" alt="sofa image">            
+          </div>
+          <div class="slider__item">
+            <div class="slider__content">
+              <h1 class="slider__title">
+                SMART AND
+                TRENDY
+              </h1>
+              <p class="slider__text">
+                Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              </p>
+              <a class="slider__btn-link" href="#">
+                Shop Now
+              </a>
+            </div>
+            <img class="slider__img" src="images/slider/2.png" alt="sofa image">
+          </div>
+          <div class="slider__item">
+            <div class="slider__content">
+              <h1 class="slider__title">
+                SMART AND
+                TRENDY
+              </h1>
+              <p class="slider__text">
+                Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              </p>
+              <a class="slider__btn-link" href="#">
+                Shop Now
+              </a>
+            </div>
+            <img class="slider__img" src="images/slider/3.png" alt="sofa image">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
@@ -198,6 +249,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
