--- a/app/index.html
+++ b/app/index.html
@@ -424,6 +424,68 @@
       </div>
     </section>
 
+    <section class="design">
+      <div class="container">
+        <h2 class="design__title title">
+          New Design
+        </h2>
+        <div class="design__filter">
+          <button class="design__filter-btn filter-btn">All</button>
+          <button class="design__filter-btn filter-btn">Furnitures</button>
+          <button class="design__filter-btn filter-btn">Chairs</button>
+          <button class="design__filter-btn filter-btn">Lighting</button>
+          <button class="design__filter-btn filter-btn">Decor</button>
+        </div>
+        <div class="design__wrapper">
+          <div class="design__item" style="background-image: url('images/products/image-10.png');">
+            <h4 class="design__item-title">
+              Beat Flat Pendant
+              Black <span>Classic</span>
+            </h4>
+          </div>
+          <div class="design__item" style="background-image: url('images/products/image-11.jpg');">
+            <h4 class="design__item-title">
+              Lampe Sur Pieds
+              Bamboo
+              <span>Classic</span>
+            </h4>
+          </div>
+          <div class="design__item" style="background-image: url('images/products/image-12.png');">
+            <h4 class="design__item-title">
+              Rattan Rocking
+              Chair
+              <span>Classic</span>
+            </h4>
+          </div>
+          <div class="design__item" style="background-image: url('images/products/image-13.jpg');">
+            <h4 class="design__item-title">
+              Rattan Rocking
+              Chair
+              <span>Classic</span>
+            </h4>
+          </div>
+          <div class="design__item" style="background-image: url('images/products/image-14.png');">
+            <h4 class="design__item-title">
+              Rattan Rocking
+              Chair
+              <span>Classic</span>
+            </h4>
+          </div>
+          <div class="design__item" style="background-image: url('images/products/image-15.jpg');">
+            <h4 class="design__item-title">
+              Lampe Sur Pieds
+              Bamboo
+              <span>Classic</span>
+            </h4>
+          </div>
+        </div>
+      </div>
+      <div class="design__video" style="background-image: url('images/video-bg.jpg');">
+        <a class="design__video-link" href="#">
+          <img src="images/icons/video-play.svg" alt="play">
+        </a>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
