added mixitup and fancybox

--- a/app/index.html
+++ b/app/index.html
@@ -189,14 +189,14 @@
           Products of the week
         </h2>
         <div class="products__filter">
-          <button class="products__filter-btn filter-btn">All</button>
-          <button class="products__filter-btn filter-btn">Furnitures</button>
-          <button class="products__filter-btn filter-btn">Chairs</button>
-          <button class="products__filter-btn filter-btn">Lighting</button>
-          <button class="products__filter-btn filter-btn">Decor</button>
+          <button class="products__filter-btn filter-btn" type="button" data-filter="all">All</button>
+          <button class="products__filter-btn filter-btn" type="button" data-filter=".category-a">Furnitures</button>
+          <button class="products__filter-btn filter-btn" type="button" data-filter=".category-b">Chairs</button>
+          <button class="products__filter-btn filter-btn" type="button" data-filter=".category-c">Lighting</button>
+          <button class="products__filter-btn filter-btn" type="button" data-filter=".category-d">Decor</button>
         </div>
         <div class="products__inner">
-          <div class="products__item" style="background-image: url('images/products/image-1.png');">
+          <div class="products__item mix category-c" style="background-image: url('images/products/image-1.png');">
             <div class="products__box-links">
               <a class="products__box-link" href="#">
                 <svg width="20px" height="20px">
@@ -224,7 +224,7 @@
               $29.00
             </div>
           </div>
-          <div class="products__item" style="background-image: url('images/products/image-2.png');">
+          <div class="products__item mix category-a" style="background-image: url('images/products/image-2.png');">
             <div class="products__box-links">
               <a class="products__box-link" href="#">
                 <svg width="20px" height="20px">
@@ -252,7 +252,7 @@
               $29.00
             </div>
           </div>
-          <div class="products__item" style="background-image: url('images/products/image-3.png');">
+          <div class="products__item mix category-d" style="background-image: url('images/products/image-3.png');">
             <div class="products__box-links">
               <a class="products__box-link" href="#">
                 <svg width="20px" height="20px">
@@ -280,7 +280,7 @@
               $29.00
             </div>
           </div>
-          <div class="products__item" style="background-image: url('images/products/image-4.png');">
+          <div class="products__item mix category-b" style="background-image: url('images/products/image-4.png');">
             <div class="products__box-links">
               <a class="products__box-link" href="#">
                 <svg width="20px" height="20px">
@@ -308,7 +308,7 @@
               $29.00
             </div>
           </div>
-          <div class="products__item" style="background-image: url('images/products/image-5.png');">
+          <div class="products__item mix category-a" style="background-image: url('images/products/image-5.png');">
             <div class="products__box-links">
               <a class="products__box-link" href="#">
                 <svg width="20px" height="20px">
@@ -336,7 +336,7 @@
               $29.00
             </div>
           </div>
-          <div class="products__item" style="background-image: url('images/products/image-6.png');">
+          <div class="products__item mix category-c" style="background-image: url('images/products/image-6.png');">
             <div class="products__box-links">
               <a class="products__box-link" href="#">
                 <svg width="20px" height="20px">
@@ -364,7 +364,7 @@
               $29.00
             </div>
           </div>
-          <div class="products__item" style="background-image: url('images/products/image-7.png');">
+          <div class="products__item mix category-d" style="background-image: url('images/products/image-7.png');">
             <div class="products__box-links">
               <a class="products__box-link" href="#">
                 <svg width="20px" height="20px">
@@ -392,7 +392,7 @@
               $29.00
             </div>
           </div>
-          <div class="products__item" style="background-image: url('images/products/image-8.png');">
+          <div class="products__item mix category-b" style="background-image: url('images/products/image-8.png');">
             <div class="products__box-links">
               <a class="products__box-link" href="#">
                 <svg width="20px" height="20px">
@@ -430,48 +430,48 @@
           New Design
         </h2>
         <div class="design__filter">
-          <button class="design__filter-btn filter-btn">All</button>
-          <button class="design__filter-btn filter-btn">Furnitures</button>
-          <button class="design__filter-btn filter-btn">Chairs</button>
-          <button class="design__filter-btn filter-btn">Lighting</button>
-          <button class="design__filter-btn filter-btn">Decor</button>
+          <button class="design__filter-btn filter-btn" type="button" data-filter="all">All</button>
+          <button class="design__filter-btn filter-btn" type="button" data-filter=".category-a">Furnitures</button>
+          <button class="design__filter-btn filter-btn" type="button" data-filter=".category-b">Chairs</button>
+          <button class="design__filter-btn filter-btn" type="button" data-filter=".category-c">Lighting</button>
+          <button class="design__filter-btn filter-btn" type="button" data-filter=".category-d">Decor</button>
         </div>
         <div class="design__wrapper">
-          <div class="design__item" style="background-image: url('images/products/image-10.png');">
+          <div class="design__item mix category-b" style="background-image: url('images/products/image-10.png');">
             <h4 class="design__item-title">
               Beat Flat Pendant
               Black <span>Classic</span>
             </h4>
           </div>
-          <div class="design__item" style="background-image: url('images/products/image-11.jpg');">
+          <div class="design__item mix category-d" style="background-image: url('images/products/image-11.jpg');">
             <h4 class="design__item-title">
               Lampe Sur Pieds
               Bamboo
               <span>Classic</span>
             </h4>
           </div>
-          <div class="design__item" style="background-image: url('images/products/image-12.png');">
+          <div class="design__item mix category-c category-b" style="background-image: url('images/products/image-12.png');">
             <h4 class="design__item-title">
               Rattan Rocking
               Chair
               <span>Classic</span>
             </h4>
           </div>
-          <div class="design__item" style="background-image: url('images/products/image-13.jpg');">
+          <div class="design__item mix category-a" style="background-image: url('images/products/image-13.jpg');">
             <h4 class="design__item-title">
               Rattan Rocking
               Chair
               <span>Classic</span>
             </h4>
           </div>
-          <div class="design__item" style="background-image: url('images/products/image-14.png');">
+          <div class="design__item mix category-c" style="background-image: url('images/products/image-14.png');">
             <h4 class="design__item-title">
               Rattan Rocking
               Chair
               <span>Classic</span>
             </h4>
           </div>
-          <div class="design__item" style="background-image: url('images/products/image-15.jpg');">
+          <div class="design__item mix category-d" style="background-image: url('images/products/image-15.jpg');">
             <h4 class="design__item-title">
               Lampe Sur Pieds
               Bamboo
@@ -481,7 +481,7 @@
         </div>
       </div>
       <div class="design__video" style="background-image: url('images/video-bg.jpg');">
-        <a class="design__video-link" href="#">
+        <a class="design__video-link" data-fancybox href="https://youtu.be/QuGVpcCWk48">
           <img src="images/icons/video-play.svg" alt="play">
         </a>
       </div>
