--- a/app/index.html
+++ b/app/index.html
@@ -422,6 +422,49 @@
           </div>
         </div>
       </div>
+      <div class="container-page">
+        <div class="products__tabs">
+          <div class="products__tabs-item">
+            <img class="products__tabs-img" src="images/products/image-16.png" alt="decor image">
+            <div class="products__tabs-content">
+              <h3 class="products__tabs-title">
+                Mirum Notare Tellus
+              </h3>
+              <p class="products__tabs-desc">
+                LEDCornBulb Lamp 5W 7W 10W 12W 15W E26 E27LEDCornLight
+              </p>
+              <a class="products__tabs-link btn-link" href="#">
+                View More
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="9" viewBox="0 0 22 9">
+                  <path class="cls-1"
+                    d="M535.3,654.472h16.948l-0.1,2.857a0.292,0.292,0,0,0,0,.41l0.172,0.172a0.28,0.28,0,0,0,.2.086,0.285,0.285,0,0,0,.2-0.084l4.193-4.211A0.292,0.292,0,0,0,557,653.5a0.283,0.283,0,0,0-.084-0.2l-4.193-4.213a0.289,0.289,0,0,0-.407,0l-0.172.173a0.287,0.287,0,0,0-.084.2,0.278,0.278,0,0,0,.084.2l0.113,2.865H535.292a0.3,0.3,0,0,0-.292.295v1.37A0.292,0.292,0,0,0,535.3,654.472Z"
+                    transform="translate(-535 -649)" />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="products__tabs-item">
+            <img class="products__tabs-img" src="images/products/image-17.png" alt="decor image">
+            <div class="products__tabs-content">
+              <h3 class="products__tabs-title">
+                Malesuada Tempor
+                Euismod
+              </h3>
+              <p class="products__tabs-desc">
+                50W 8000lm Compact Size for HID StreetLightReplacementLEDCornLight
+              </p>
+              <a class="products__tabs-link btn-link" href="#">
+                View More
+                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="9" viewBox="0 0 22 9">
+                  <path class="cls-1"
+                    d="M535.3,654.472h16.948l-0.1,2.857a0.292,0.292,0,0,0,0,.41l0.172,0.172a0.28,0.28,0,0,0,.2.086,0.285,0.285,0,0,0,.2-0.084l4.193-4.211A0.292,0.292,0,0,0,557,653.5a0.283,0.283,0,0,0-.084-0.2l-4.193-4.213a0.289,0.289,0,0,0-.407,0l-0.172.173a0.287,0.287,0,0,0-.084.2,0.278,0.278,0,0,0,.084.2l0.113,2.865H535.292a0.3,0.3,0,0,0-.292.295v1.37A0.292,0.292,0,0,0,535.3,654.472Z"
+                    transform="translate(-535 -649)" />
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="design">
@@ -442,6 +485,7 @@
               Beat Flat Pendant
               Black <span>Classic</span>
             </h4>
+            <a href="#" class="design__item-link"></a>
           </div>
           <div class="design__item mix category-d" style="background-image: url('images/products/image-11.jpg');">
             <h4 class="design__item-title">
@@ -449,13 +493,16 @@
               Bamboo
               <span>Classic</span>
             </h4>
+            <a href="#" class="design__item-link"></a>
           </div>
-          <div class="design__item mix category-c category-b" style="background-image: url('images/products/image-12.png');">
+          <div class="design__item mix category-c category-b"
+            style="background-image: url('images/products/image-12.png');">
             <h4 class="design__item-title">
               Rattan Rocking
               Chair
               <span>Classic</span>
             </h4>
+            <a href="#" class="design__item-link"></a>
           </div>
           <div class="design__item mix category-a" style="background-image: url('images/products/image-13.jpg');">
             <h4 class="design__item-title">
@@ -463,6 +510,7 @@
               Chair
               <span>Classic</span>
             </h4>
+            <a href="#" class="design__item-link"></a>
           </div>
           <div class="design__item mix category-c" style="background-image: url('images/products/image-14.png');">
             <h4 class="design__item-title">
@@ -470,6 +518,7 @@
               Chair
               <span>Classic</span>
             </h4>
+            <a href="#" class="design__item-link"></a>
           </div>
           <div class="design__item mix category-d" style="background-image: url('images/products/image-15.jpg');">
             <h4 class="design__item-title">
@@ -477,6 +526,7 @@
               Bamboo
               <span>Classic</span>
             </h4>
+            <a href="#" class="design__item-link"></a>
           </div>
         </div>
       </div>
