added section articles and block partners

--- a/app/index.html
+++ b/app/index.html
@@ -536,6 +536,77 @@
         </a>
       </div>
     </section>
+
+    <section class="articles">
+      <div class="container">
+        <h2 class="articles__title title">
+          Our Insights & Articles
+        </h2>
+        <a class="articles__view-link" href="#">
+          View All
+        </a>
+        <div class="articles__inner">
+          <div class="articles__item">
+            <img class="articles__img" src="images/articles/image-1.jpg" alt="design image" >
+            <a class="articles__item-link" href="#">
+              NEWS
+            </a>
+            <div class="articles__content">
+              <p class="articles__text">
+                Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam  
+              </p>
+              <div class="articles__content-date">
+                 28 JANUARY, 2020
+                <span>BY ADMIN</span>
+              </div>
+            </div>
+          </div>
+          <div class="articles__item">
+            <img class="articles__img" src="images/articles/image-2.jpg" alt="design image" >
+            <a class="articles__item-link" href="#">
+              NEWS
+            </a>
+            <div class="articles__content">
+              <p class="articles__text">
+                Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              </p>
+              <div class="articles__content-date">
+                28 JANUARY, 2020
+                <span>BY ADMIN</span>
+              </div>
+            </div>
+          </div>
+          <div class="articles__item">
+            <img class="articles__img" src="images/articles/image-3.jpg" alt="design image" >
+            <a class="articles__item-link" href="#">
+              NEWS
+            </a>
+            <div class="articles__content">
+              <p class="articles__text">
+                Rncididunt ut labore et dolore magna aliqua. Ut enim
+              </p>
+              <div class="articles__content-date">
+                28 JANUARY, 2020
+                <span>BY ADMIN</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="partners">
+      <div class="container">
+        <div class="partners__wrapper">
+          <img class="partners__img" src="images/partners/partner-1.png" alt="logo partner">
+          <img class="partners__img" src="images/partners/partner-2.png" alt="logo partner">
+          <img class="partners__img" src="images/partners/partner-3.png" alt="logo partner">
+          <img class="partners__img" src="images/partners/partner-4.png" alt="logo partner">
+          <img class="partners__img" src="images/partners/partner-5.png" alt="logo partner">
+        </div>
+      </div>
+    </div>
+
   </main>
 
   <footer class="footer">
