--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
               </a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">
+              <a class="menu__list-link" href="#about">
                 About
               </a>
             </li>
@@ -72,7 +72,7 @@
     </div>
   </header>
 
-  <main class="main">
+  <main class="main" id="home">
 
     <section class="slider">
       <div class="container-page">
@@ -651,7 +651,7 @@
           </h6>
           <ul class="footer-top__nav-list">
             <li class="footer-top__list-item">
-              <a class="footer-top__list-link" href="#">
+              <a class="footer-top__list-link" href="#about">
                 About us
               </a>
             </li>
@@ -731,7 +731,7 @@
             </a>
           </li>
           <li class="footer-bottom__nav-item">
-            <a class="footer-bottom__nav-link" href="#">
+            <a class="footer-bottom__nav-link" href="#about">
               About
             </a>
           </li>
