added page login

--- a/app/about.html
+++ b/app/about.html
@@ -72,7 +72,7 @@
     </div>
   </header>
 
-  <main class="main"  id="about">
+  <main class="main">
 
     <section class="breadcrumbs">
       <div class="container">
@@ -81,7 +81,7 @@
         </h2>
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="#home">
+            <a class="breadcrumbs__link" href="index.html">
               home
             </a>
           </li>
